<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Основные настройки">

        <ListPreference
            android:key="city"
            android:summary="Нажмите чтобы выбрать город"
            android:title="Город" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="use_localhost"
            android:title="Использовать локальный сервер"/>

        <EditTextPreference
            android:defaultValue="@string/remote"
            android:key="url_remote"
            android:title="Адрес удаленного сервера"/>

        <EditTextPreference
            android:defaultValue="@string/localhost"
            android:key="url_localhost"
            android:title="Адрес локального сервера"/>

    </PreferenceCategory>
</PreferenceScreen>