<resources>
    <string name="app_name">ticketeen</string>
    <string name="menu_toggle_tile_numbers">Show/hide tile numbers</string>
    <string name="menu_start_new_game">Start new game</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_ticket_parser">Извлечь</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="pref_key_city">city</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
